[package]
name = "clotho_rs"
version = "0.1.0"
authors = ["Larry Hsiao <larryhsiao@larryhsiao.com>"]
edition = "2018"
license = "MIT"
description = "Utilities"
readme = "readme.md"
homepage = "https://github.com/LarryHsiao/clotho_rs"
repository = "https://github.com/LarryHsiao/clotho_rs"
categories = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
